2002-09-11  Eric Baudais  <baudais@kkpsi.org>

	* help/C/gnotski-C.omf: It is a valid XML file.  I'd 
	advise boc to install scrollkeeper-preinstall correctly 
	and learn how to use xmllint.

2002-09-11  jacob berkman  <jacob@ximian.com>

	* help/C/gnotski-C.omf: remove <!DOCTYPE> as it breaks
	scrollkeeper-preinstall

2002-09-09  jacob berkman  <jacob@ximian.com>

	* help/C/gnotski-C.omf: fix to be valid XML

2002-09-06  jacob berkman  <jacob@ximian.com>

	* Makefile.am (SUBDIRS): add help

2002-08-23  Andrew Sobala  <andrew@sobala.net>

	* help/C/gnotski-C.omf: Fix the OMF file, to stop confusing
	Scrollkeeper. Fixing #91402.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* gnotski.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-06-03  Ross Burton  <ross@burtonini.com>

	* gnotski.c: Load pixmaps from the application path instead of the
	system path (fixes #83917). Also set the about dialog to be a transient for the
	parent window.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: remove help menu item

2002-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (expose_space): fix run-time warning, patch by Shahms E.
	King <shahms@shahms.com>

2002-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (load_image), (about_cb): have a nice dialog when the map
	can't be loaded, add icon to about box

2002-04-29  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnotski.c: (main), (create_window), (expose_space),
	(gui_draw_pixmap), (configure_space), (create_space), (load_image),
	(new_move), (quit_game_cb): patch from Shahms E. King
	<shahms@shahms.com> to port gnotski

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnotski.c (about_cb): Don't try to translate empty string.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am: